[package]
name = "robin_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
robin_core ={ path = "../robin_core"}
tokio = { version = "1.37.0", features = ["full"] }
walkdir = "2.5.0"
zip = "0.6"

[[bin]]
name = "robin"
path = "src/main.rs"